--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- introduction -->
     <!-- area-1 -->
-    <section class="mt-7">
+    <section class="mt-9 mt-md-7">
         <div class="container">
         </div>
         <div class="bg-brand-gray-light">
