--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     <header>
         <!-- carousel -->
         <div id="carouselExampleFade" class="carousel slide carousel-fade mx-md-6 mx-lg-8" data-ride="carousel">
-            <div class="carousel-inner carousel--maxHeight">
+            <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/index/banner_01.jpg" class="d-block w-100" alt="嚴選花材">
+                    <div style="background-image: url('img/index/banner_01.jpg');" class="carousel__img--height bg--cover d-block w-100"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/index/banner_02.jpg" class="d-block w-100" alt="日系花束">
+                    <div style="background-image: url('img/index/banner_02.jpg');" class="carousel__img--height bg--cover d-block w-100"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/index/banner_03.jpg" class="d-block w-100" alt="盆栽居家風格">
+                    <div style="background-image: url('img/index/banner_03.jpg');" class="carousel__img--height bg--cover d-block w-100"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/index/banner_04.jpg" class="d-block w-100" alt="多肉植物">
+                    <div style="background-image: url('img/index/banner_04.jpg');" class="carousel__img--height bg--cover d-block w-100"></div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -120,7 +120,7 @@
 
     <!-- introduction -->
     <!-- area-1 -->
-    <section class="mt-9 mt-md-7">
+    <section class="mt-6">
         <div class="container">
         </div>
         <div class="bg-brand-gray-light">
