--- a/cart.html
+++ b/cart.html
@@ -23,6 +23,8 @@
     <link href="圖片路徑" rel="apple-touch-icon" />
     <!-- css -->
     <link rel="stylesheet" href="assets/stylesheets/all.css">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/18089327b4.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -63,14 +65,14 @@
                         <h1 class="h4 text-center text-brand-green-light">您的購物車</h1>
                     </div>
                     <div class="container">
-                        <div class="row my-4 d-flex  align-items-center">
+                        <div class="row my-4 align-items-center">
                             <div class="col-8 col-md-4">
                                 <div class="w-100 bg--cover"
                                     style="background-image: url('img/potted_plant/product_01.jpg'); height: 180px;">
                                 </div>
                             </div>
                             <div class="col-4 col-md-8">
-                                <div class="row d-flex align-items-center py-3">
+                                <div class="row align-items-center py-3">
                                     <div class="col-md-4">
                                         <h5 class="mb-0 font-weight-normal">多肉盆栽</h5>
                                         <span>NT$420</span>
@@ -116,7 +118,7 @@
                                 </div>
                             </div>
                             <div class="col-4 col-md-8">
-                                <div class="row d-flex align-items-center py-3">
+                                <div class="row align-items-center py-3">
                                     <div class="col-md-4">
                                         <h5 class="mb-0 font-weight-normal">禪風立花</h5>
                                         <span>NT$2500</span>
@@ -162,7 +164,7 @@
                                 </div>
                             </div>
                             <div class="col-4 col-md-8">
-                                <div class="row d-flex align-items-center py-3">
+                                <div class="row align-items-center py-3">
                                     <div class="col-md-4">
                                         <h5 class="mb-0 font-weight-normal">捧花</h5>
                                         <span>NT$420</span>
@@ -270,7 +272,7 @@
                         <p>生活－藝術－風格</p>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center">
+                <div class="row align-items-center">
                     <div class="col-md-6">
                         <div class="footer__communityIcon">
                             <a href="#"><i class="fab fa-line"></i></a>
