--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             <div class="row my-6 animated">
                 <div class="col-md-4 mb-5">
-                    <div class="card-deck d-block mx-1">
+                    <div class="card d-block mx-1">
                         <div class="bg-brand-gray w-100">
                             <div class="card__item--img"
                                 style="background-image: url('img/potted_plant/product_01.jpg');">
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-5 animated">
-                    <div class="card-deck d-block mx-1">
+                    <div class="card d-block mx-1">
                         <div class="bg-brand-gray w-100">
                             <div class="card__item--img"
                                 style="background-image: url('img/potted_plant/product_02.jpg');">
@@ -210,7 +210,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-5 animated">
-                    <div class="card-deck d-block mx-1">
+                    <div class="card d-block mx-1">
                         <div class="bg-brand-gray w-100">
                             <div class="card__item--img" style="background-image: url('img/floral/product_01.jpg');">
                             </div>
@@ -270,7 +270,7 @@
                         <p>生活－藝術－風格</p>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center">
+                <div class="row align-items-center">
                     <div class="col-md-6">
                         <div class="footer__communityIcon">
                             <a href="#"><i class="fab fa-line"></i></a>
