--- a/ckeckout-2.html
+++ b/ckeckout-2.html
@@ -256,7 +256,7 @@
                         <p>生活－藝術－風格</p>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center">
+                <div class="row align-items-center">
                     <div class="col-md-6">
                         <div class="footer__communityIcon">
                             <a href="#"><i class="fab fa-line"></i></a>
