--- a/product-floral.html
+++ b/product-floral.html
@@ -77,9 +77,9 @@
                     </div>
                 </div>
                 <div class="col-md-8 mt-5 mt-md-0">
-                    <div class="row d-flex">
+                    <div class="row">
                         <div class="col-md-6">
-                            <div class="card-deck d-block mb-5 mb-md-5 px-md-3">
+                            <div class="card d-block mb-5 mb-md-5 border-0">
                                 <div class="bg-brand-gray w-100">
                                     <div class="card__item--img"
                                         style="background-image: url('img/floral/product_01.jpg');">
@@ -96,7 +96,7 @@
                         </div>
 
                         <div class="col-md-6">
-                            <div class="card-deck d-block mb-5 mb-md-5 px-md-3">
+                            <div class="card d-block mb-5 mb-md-5 border-0">
                                 <div class="bg-brand-gray w-100">
                                     <div class="card__item--img"
                                         style="background-image: url('img/floral/product_02.jpg');">
@@ -113,7 +113,7 @@
                         </div>
 
                         <div class="col-md-6 animated">
-                            <div class="card-deck d-block mb-5 mb-md-0 px-md-3">
+                            <div class="card d-block mb-5 mb-md-0 border-0">
                                 <div class="bg-brand-gray w-100">
                                     <div class="card__item--img"
                                         style="background-image: url('img/floral/product_03.jpg');">
@@ -130,7 +130,7 @@
                         </div>
 
                         <div class="col-md-6 animated">
-                            <div class="card-deck d-block mb-5 mb-md-0 px-md-3">
+                            <div class="card d-block mb-5 mb-md-0 border-0">
                                 <div class="bg-brand-gray w-100">
                                     <div class="card__item--img"
                                         style="background-image: url('img/floral/product_04.jpg');">
@@ -213,7 +213,7 @@
                         <p>生活－藝術－風格</p>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center">
+                <div class="row align-items-center">
                     <div class="col-md-6">
                         <div class="footer__communityIcon">
                             <a href="#"><i class="fab fa-line"></i></a>
