--- a/login.html
+++ b/login.html
@@ -91,12 +91,11 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
-                    <div>
-                        <div class="bg-brand-gray p-5  px-md-5 py-md-3">
+                <div class="col-md-6 bg-brand-gray">
                             <h1 class="h2 text-center text-white mb-4 mt-4 d-none d-md-block font-weight-normal">會員登入
                             </h1>
                             <form class="needs-validation" novalidate>
+                                <div class="px-5 pt-5 pb-4 px-md-5 py-md-3">
                                 <div class="form-group bg-white">
                                     <div class="input-group d-flex align-items-center pr-3">
                                         <label for="username"></label>
@@ -128,10 +127,9 @@
                                     <label class="custom-control-label text-white font-weight-light"
                                         for="rememberme">記住我</label>
                                 </div>
-                        </div>
+                            </div>
                         <button type="submit" class="btn btn-brand-green-light btn-block py-4 text-white">登入帳號</button>
                         </form>
-                    </div>
                 </div>
             </div>
         </div>
